# floopy-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: .env.example  README.md  chat.rs  chat_stream.rs  constraints.rs  decisions_list.rs  embeddings.rs  experiments_create.rs  export_decisions.rs  feedback.rs  routing_explain.rs
src/: client.rs  constants.rs  error.rs  headers.rs  http.rs  lib.rs  openai_delegate.rs  options.rs
src/resources/: batches.rs  constraints.rs  decisions.rs  evaluations.rs  experiments.rs  export.rs  feedback.rs  files.rs  mod.rs  routing.rs  sessions.rs
src/types/: batches.rs  constraints.rs  decisions.rs  evaluations.rs  experiments.rs  export.rs  feedback.rs  files.rs  mod.rs  routing.rs  sessions.rs
tests/: batch.rs  integration.rs
